# strangeadventures

./: .gitignore  README.md  autoeverything  buildboth  configure.ac  is_explorer.dsp  is_explorer.dsw
src/: Makefile.am  Typedefs.h  cards.cpp  combat.cpp  combat.h  combat_display.cpp  combat_init.cpp  combat_sim.cpp  combat_weapons.cpp  endgame.cpp  endgame.h  font.cpp  gfx.cpp  gfx.h  iface_globals.h  interface.cpp  interface.h  is_fileio.cpp  is_fileio.h  main.cpp  modconfig.cpp  sais_version.h  scaledvideo.cpp  scaledvideo.hpp  sdl_iface.cpp  sdl_main.cpp  snd.h  sound.cpp  sprites.cpp  starmap.cpp  starmap.h  starmap_encounters.cpp  starmap_init.cpp  starmap_inventory.cpp  startgame.cpp  textstr.cpp  textstr.h  typedefs.h  w32_gfx.cpp  w32_sound.cpp  (+1 more)
